feat(UPS-RS): add create and get workitem APIs
